--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid rgba(122, 72, 229, 0.4); 
+  border: 6px solid rgb(152, 37, 190, 1); 
   border-radius: 50% !important;
 }
 
@@ -85,7 +85,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #7a48e566;
+  color: #9825be;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -116,7 +116,7 @@
 }
 
 .contactme:hover{
-  color: #7a48e566;
+  color: #9825be;
   background-color: white;
 }
 /* main body */
@@ -140,7 +140,7 @@ body {
 } */
 
 a {
-  color: #7a48e566;
+  color: #9825be;
 }
 
 /* main blockqoute */
@@ -351,7 +351,7 @@ h3 {
   border-bottom: 5px solid #24305e;
 }
 
-#intro.section .teal {
+#intro.section .purple {
   padding: 0 10px;
 }
 
@@ -367,7 +367,7 @@ h3 {
 .waves-effect.waves-blue .waves-ripple {
   /* The alpha value allows the text and background color
    of the button to still show through. */
-  background-color: rgba(33, 150, 243, 0.2);
+  background-color: rgba(152, 37, 190, 1);
 }
 
 .card {
@@ -552,6 +552,10 @@ small {
   color: #008073 !important;
 }
 
+.purple-text {
+  color: #9825be !important;
+}
+
 /* .teal-text {
   color: #0b5e86 !important;
 } */
@@ -560,6 +564,10 @@ small {
 
 .teal {
   background-color: #008073 !important;
+}
+
+.purple {
+  background-color: #9825be !important;
 }
 
 /* .teal {
