--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #004d40 !important;
+  border-bottom: 3px solid #9825be !important;
 }
 
 #skills .card.large {
