--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,10 @@ small {
   background-color: #00695c !important;
 } */
 
+.map-wrap { max-width: 100%; }
+
+.map-iframe { display:block; margin:0 auto; max-width:100%; border:0; }
+
 @media (min-width: 1200px) {
   #experience .container {
     width: 860px;
